// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots NotesListItem default 1`] = `
<RCTSafeAreaView
  paddingTop={0}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "borderWidth": 1,
        "margin": 5,
        "padding": 5,
      }
    }
  >
    <RCTScrollView
      style={null}
    >
      <View>
        <View
          collapsable={undefined}
          style={
            Object {
              "backgroundColor": "white",
              "opacity": 0,
            }
          }
        >
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            collapsable={undefined}
            hasTVPreferredFocus={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                    "zIndex": 1,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#4d4e4c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 12.5,
                    },
                    Object {
                      "marginLeft": 12,
                      "marginRight": 12,
                      "marginTop": 7,
                    },
                  ]
                }
              >
                Jan 1 at 9:41 am
              </Text>
            </View>
            <Text
              accessible={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#3c3c3c",
                    "fontFamily": "OpenSans-Regular",
                    "fontSize": 15,
                  },
                  Object {
                    "flexDirection": "row",
                    "marginBottom": 7,
                    "marginLeft": 12,
                    "marginRight": 12,
                    "marginTop": 7,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#3c3c3c",
                      "fontFamily": "OpenSans-Bold",
                      "fontSize": 15,
                    },
                  ]
                }
              >
                #hashtag1
              </Text>
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#3c3c3c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 15,
                    },
                  ]
                }
              >
                 This should not show up in comments. Quis molestiae tempora eligendi omnis quisquam quisquam quos. Dolor voluptatibus velit nobis culpa deleniti. Reprehenderit in nisi et. Quia odio et inventore eligendi in deserunt id. Sit odio quia vitae provident quo provident molestiae.
              </Text>
            </Text>
          </View>
          <ExponentLinearGradient
            colors={
              Array [
                4293190885,
                4293783022,
                4294440952,
              ]
            }
            endPoint={undefined}
            locations={null}
            startPoint={undefined}
            style={
              Object {
                "height": 10,
              }
            }
          />
        </View>
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;

exports[`Storyshots NotesListItem initially expanded 1`] = `
<RCTSafeAreaView
  paddingTop={0}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "borderWidth": 1,
        "margin": 5,
        "padding": 5,
      }
    }
  >
    <RCTScrollView
      style={null}
    >
      <View>
        <View
          collapsable={undefined}
          style={
            Object {
              "backgroundColor": "white",
              "opacity": 0,
            }
          }
        >
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            collapsable={undefined}
            hasTVPreferredFocus={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                    "zIndex": 1,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#4d4e4c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 12.5,
                    },
                    Object {
                      "marginLeft": 12,
                      "marginRight": 12,
                      "marginTop": 7,
                    },
                  ]
                }
              >
                Jan 1 at 9:41 am
              </Text>
              <View
                accessibilityComponentType={undefined}
                accessibilityLabel={undefined}
                accessibilityTraits={undefined}
                accessible={true}
                collapsable={undefined}
                hasTVPreferredFocus={undefined}
                hitSlop={
                  Object {
                    "bottom": 10,
                    "left": 10,
                    "right": 10,
                    "top": 10,
                  }
                }
                isTVSelectable={true}
                nativeID={undefined}
                onLayout={undefined}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "marginLeft": "auto",
                    "marginRight": 10,
                    "marginTop": 7,
                    "opacity": 1,
                  }
                }
                testID={undefined}
                tvParallaxProperties={undefined}
              >
                <Text
                  accessible={true}
                  allowFontScaling={false}
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#627cff",
                        "fontFamily": "OpenSans-Regular",
                        "fontSize": 12.5,
                      },
                    ]
                  }
                >
                  Delete
                </Text>
              </View>
              <View
                accessibilityComponentType={undefined}
                accessibilityLabel={undefined}
                accessibilityTraits={undefined}
                accessible={true}
                collapsable={undefined}
                hasTVPreferredFocus={undefined}
                hitSlop={
                  Object {
                    "bottom": 10,
                    "left": 10,
                    "right": 10,
                    "top": 10,
                  }
                }
                isTVSelectable={true}
                nativeID={undefined}
                onLayout={undefined}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "marginRight": 10,
                    "marginTop": 7,
                    "opacity": 1,
                  }
                }
                testID={undefined}
                tvParallaxProperties={undefined}
              >
                <Text
                  accessible={true}
                  allowFontScaling={false}
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#627cff",
                        "fontFamily": "OpenSans-Regular",
                        "fontSize": 12.5,
                      },
                    ]
                  }
                >
                  Edit
                </Text>
              </View>
            </View>
            <Text
              accessible={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#3c3c3c",
                    "fontFamily": "OpenSans-Regular",
                    "fontSize": 15,
                  },
                  Object {
                    "flexDirection": "row",
                    "marginBottom": 7,
                    "marginLeft": 12,
                    "marginRight": 12,
                    "marginTop": 7,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#3c3c3c",
                      "fontFamily": "OpenSans-Bold",
                      "fontSize": 15,
                    },
                  ]
                }
              >
                #hashtag1
              </Text>
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#3c3c3c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 15,
                    },
                  ]
                }
              >
                 This should not show up in comments. Quis molestiae tempora eligendi omnis quisquam quisquam quos. Dolor voluptatibus velit nobis culpa deleniti. Reprehenderit in nisi et. Quia odio et inventore eligendi in deserunt id. Sit odio quia vitae provident quo provident molestiae.
              </Text>
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "white",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                    "zIndex": 1,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#4a4a4a",
                      "fontFamily": "OpenSans-Semibold",
                      "fontSize": 12.5,
                    },
                    Object {
                      "flexShrink": 1,
                      "marginLeft": 12,
                      "marginTop": 7,
                    },
                  ]
                }
              >
                Some other person
              </Text>
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#c9c9c9",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 12.5,
                    },
                    Object {
                      "marginLeft": 10,
                      "marginRight": 10,
                      "marginTop": 7,
                    },
                  ]
                }
              >
                Today at 10:41 am
              </Text>
            </View>
            <Text
              accessible={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#8c8c8c",
                    "fontFamily": "OpenSans-Regular",
                    "fontSize": 12.5,
                  },
                  Object {
                    "flexDirection": "row",
                    "marginBottom": 7,
                    "marginLeft": 12,
                    "marginRight": 12,
                    "marginTop": 0,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#8c8c8c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 12.5,
                    },
                  ]
                }
              >
                This is comment 1 
              </Text>
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#8c8c8c",
                      "fontFamily": "OpenSans-Bold",
                      "fontSize": 12.5,
                    },
                  ]
                }
              >
                #hashtag1
              </Text>
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#8c8c8c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 12.5,
                    },
                  ]
                }
              >
                . This is a long comment. Fuga enim tempore non voluptas quia vitae ipsam voluptas. Et dolor adipisci dolores sunt non explicabo occaecati rerum nesciunt. Sint est asperiores sit voluptatum mollitia enim iste. Nesciunt minima sequi voluptas optio aut voluptatem. Eligendi voluptates iste eius iure commodi molestiae.
              </Text>
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "white",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                    "zIndex": 1,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#4a4a4a",
                      "fontFamily": "OpenSans-Semibold",
                      "fontSize": 12.5,
                    },
                    Object {
                      "flexShrink": 1,
                      "marginLeft": 12,
                      "marginTop": 7,
                    },
                  ]
                }
              >
                Some other person
              </Text>
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#c9c9c9",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 12.5,
                    },
                    Object {
                      "marginLeft": 10,
                      "marginRight": 10,
                      "marginTop": 7,
                    },
                  ]
                }
              >
                Today at 11:01 am
              </Text>
            </View>
            <Text
              accessible={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#8c8c8c",
                    "fontFamily": "OpenSans-Regular",
                    "fontSize": 12.5,
                  },
                  Object {
                    "flexDirection": "row",
                    "marginBottom": 7,
                    "marginLeft": 12,
                    "marginRight": 12,
                    "marginTop": 0,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#8c8c8c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 12.5,
                    },
                  ]
                }
              >
                This is comment 2 
              </Text>
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#8c8c8c",
                      "fontFamily": "OpenSans-Bold",
                      "fontSize": 12.5,
                    },
                  ]
                }
              >
                #hashtag2
              </Text>
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "white",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                    "zIndex": 1,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#4a4a4a",
                      "fontFamily": "OpenSans-Semibold",
                      "fontSize": 12.5,
                    },
                    Object {
                      "flexShrink": 1,
                      "marginLeft": 12,
                      "marginTop": 7,
                    },
                  ]
                }
              >
                Some other person
              </Text>
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#c9c9c9",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 12.5,
                    },
                    Object {
                      "marginLeft": 10,
                      "marginRight": 10,
                      "marginTop": 7,
                    },
                  ]
                }
              >
                Today at 11:21 am
              </Text>
            </View>
            <Text
              accessible={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#8c8c8c",
                    "fontFamily": "OpenSans-Regular",
                    "fontSize": 12.5,
                  },
                  Object {
                    "flexDirection": "row",
                    "marginBottom": 7,
                    "marginLeft": 12,
                    "marginRight": 12,
                    "marginTop": 0,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#8c8c8c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 12.5,
                    },
                  ]
                }
              >
                This is comment 3 
              </Text>
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#8c8c8c",
                      "fontFamily": "OpenSans-Bold",
                      "fontSize": 12.5,
                    },
                  ]
                }
              >
                #hashtag3
              </Text>
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "white",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                    "zIndex": 1,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#4a4a4a",
                      "fontFamily": "OpenSans-Semibold",
                      "fontSize": 12.5,
                    },
                    Object {
                      "flexShrink": 1,
                      "marginLeft": 12,
                      "marginTop": 7,
                    },
                  ]
                }
              >
                Some other person
              </Text>
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#c9c9c9",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 12.5,
                    },
                    Object {
                      "marginLeft": 10,
                      "marginRight": 10,
                      "marginTop": 7,
                    },
                  ]
                }
              >
                Today at 11:41 am
              </Text>
            </View>
            <Text
              accessible={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#8c8c8c",
                    "fontFamily": "OpenSans-Regular",
                    "fontSize": 12.5,
                  },
                  Object {
                    "flexDirection": "row",
                    "marginBottom": 7,
                    "marginLeft": 12,
                    "marginRight": 12,
                    "marginTop": 0,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#8c8c8c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 12.5,
                    },
                  ]
                }
              >
                This is comment 4 
              </Text>
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#8c8c8c",
                      "fontFamily": "OpenSans-Bold",
                      "fontSize": 12.5,
                    },
                  ]
                }
              >
                #hashtag4
              </Text>
            </Text>
          </View>
          <View
            style={null}
          >
            <View
              accessibilityComponentType={undefined}
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              collapsable={undefined}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "opacity": 1,
                  "padding": 8,
                }
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Image
                source={1}
                style={
                  Array [
                    Object {
                      "height": 19,
                      "marginRight": 10,
                      "width": 23,
                    },
                  ]
                }
              />
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#7e7e7e",
                      "fontFamily": "OpenSans-Semibold",
                      "fontSize": 15,
                    },
                  ]
                }
              >
                Add Comment
              </Text>
            </View>
          </View>
          <ExponentLinearGradient
            colors={
              Array [
                4293190885,
                4293783022,
                4294440952,
              ]
            }
            endPoint={undefined}
            locations={null}
            startPoint={undefined}
            style={
              Object {
                "height": 10,
              }
            }
          />
        </View>
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;

exports[`Storyshots NotesListItem today 1`] = `
<RCTSafeAreaView
  paddingTop={0}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "borderWidth": 1,
        "margin": 5,
        "padding": 5,
      }
    }
  >
    <RCTScrollView
      style={null}
    >
      <View>
        <View
          collapsable={undefined}
          style={
            Object {
              "backgroundColor": "white",
              "opacity": 0,
            }
          }
        >
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            collapsable={undefined}
            hasTVPreferredFocus={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                    "zIndex": 1,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#4d4e4c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 12.5,
                    },
                    Object {
                      "marginLeft": 12,
                      "marginRight": 12,
                      "marginTop": 7,
                    },
                  ]
                }
              >
                Today at 9:41 am
              </Text>
            </View>
            <Text
              accessible={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#3c3c3c",
                    "fontFamily": "OpenSans-Regular",
                    "fontSize": 15,
                  },
                  Object {
                    "flexDirection": "row",
                    "marginBottom": 7,
                    "marginLeft": 12,
                    "marginRight": 12,
                    "marginTop": 7,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#3c3c3c",
                      "fontFamily": "OpenSans-Bold",
                      "fontSize": 15,
                    },
                  ]
                }
              >
                #hashtag1
              </Text>
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#3c3c3c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 15,
                    },
                  ]
                }
              >
                 This should not show up in comments. Pariatur quos est quod laborum. Quisquam esse quia expedita commodi. Tempora ut exercitationem doloribus harum. Sunt omnis et accusantium et quia quos sequi molestiae. Enim necessitatibus molestiae.
              </Text>
            </Text>
          </View>
          <ExponentLinearGradient
            colors={
              Array [
                4293190885,
                4293783022,
                4294440952,
              ]
            }
            endPoint={undefined}
            locations={null}
            startPoint={undefined}
            style={
              Object {
                "height": 10,
              }
            }
          />
        </View>
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;

exports[`Storyshots NotesListItem yesterday 1`] = `
<RCTSafeAreaView
  paddingTop={0}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "borderWidth": 1,
        "margin": 5,
        "padding": 5,
      }
    }
  >
    <RCTScrollView
      style={null}
    >
      <View>
        <View
          collapsable={undefined}
          style={
            Object {
              "backgroundColor": "white",
              "opacity": 0,
            }
          }
        >
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            collapsable={undefined}
            hasTVPreferredFocus={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                    "zIndex": 1,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#4d4e4c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 12.5,
                    },
                    Object {
                      "marginLeft": 12,
                      "marginRight": 12,
                      "marginTop": 7,
                    },
                  ]
                }
              >
                Yesterday at 9:41 am
              </Text>
            </View>
            <Text
              accessible={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#3c3c3c",
                    "fontFamily": "OpenSans-Regular",
                    "fontSize": 15,
                  },
                  Object {
                    "flexDirection": "row",
                    "marginBottom": 7,
                    "marginLeft": 12,
                    "marginRight": 12,
                    "marginTop": 7,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#3c3c3c",
                      "fontFamily": "OpenSans-Bold",
                      "fontSize": 15,
                    },
                  ]
                }
              >
                #hashtag1
              </Text>
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#3c3c3c",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 15,
                    },
                  ]
                }
              >
                 This should not show up in comments. Eligendi rerum excepturi et laudantium fuga similique fugit corporis voluptatem. Esse nobis et sint magnam aut. Dolores maiores incidunt occaecati iusto laborum. Quia deleniti dolorem quibusdam id veniam perspiciatis et nisi. Corporis laboriosam esse. Soluta accusamus officiis ut excepturi blanditiis libero ut.
              </Text>
            </Text>
          </View>
          <ExponentLinearGradient
            colors={
              Array [
                4293190885,
                4293783022,
                4294440952,
              ]
            }
            endPoint={undefined}
            locations={null}
            startPoint={undefined}
            style={
              Object {
                "height": 10,
              }
            }
          />
        </View>
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;
